client/src/pages/experience/Experience.css
.experience-main {
  width: 100%;
}

.basic-experience {
  margin-left: 5%;
  margin-right: 5%;
}

.experience-heading-div {
  display: flex;
}

.experience-heading-div > * {
  flex: 1;
}

.experience-heading-img-div {
  align-items: center;
  justify-content: center;
}

.experience-heading-text-div {
  text-align: center;
}

.experience-heading-img-div > * {
  max-width: 100%;
  height: auto;
}

.experience-heading-text {
  font-size: 4em;
  font-weight: 400;
  font-family: "Monserrat";
  line-height: 1.1;
  text-align: center;
  margin-top: 80px;
}

.experience-heading-sub-text {
  font-size: 3em;
  font-family: "Montserrat", sans-serif;
  text-align: center;
  margin-bottom: 10px;
}

.experience-header-detail-text {
  font-size: 16px;
  line-height: 1.5;
  margin-top: 0px;
  margin-left: 20px;
  margin-right: 20px;
  font-family: "Monserrat";
}

@media (max-width: 1380px) {
  .experience-heading-text {
    font-size: 50px;
    margin-top: 80px;
  }
  .experience-heading-sub-text {
    font-size: 25px;
  }
}

@media (max-width: 768px) {
  .experience-heading-text {
    font-size: 3em;
    margin-top: 20px;
  }

  .experience-heading-sub-text {
    font-size: 16px;
  }

  .experience-heading-div {
    flex-direction: column;
  }

  .experience-header-detail-text {
    font-size: 16px;
    margin-right: 0px;
    line-height: normal;
    text-align: center;
  }
}
.experience-card {
  background-color: #764848;
}

